# -Password-Manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  README_EN.md  main.py  package-lock.json  package.json  requirements.txt
src/: App.tsx  data_store.py  encryption.py  generators.py  totp.py  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  generators.rs  main.rs  models.rs
src/components/: Generator.tsx  LockScreen.tsx  PasswordGeneratorPanel.tsx  Settings.tsx  Sidebar.tsx  StrengthBadge.tsx  UsernameGeneratorPanel.tsx  VaultDetail.tsx  VaultList.tsx
src/hooks/: useClipboard.ts  useFolders.ts  useI18n.ts  usePersistedConfig.ts  useVault.ts
src/hooks/__tests__/: useFolders.test.ts
src/i18n/: translations.ts
src/styles/: index.css
