[package]
name = "password-manager"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
